apps/jellyfin/ingress-tv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-http-for-tv
spec:
  ingressClassName: traefik
  rules:
    - host: mediatv.greiner.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
